--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Code</h2>
-                            <p> Open source repositories, mostly in Python </p>
+                            <p> Open source repos </p>
                            <img src="img/hand.jpg" alt="Mountain View" style="width:220px;height:180px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
