social media links

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                             <p class="promo-block-text"> Data Scientist &amp; Researcher </p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="" class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-dribbble"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-behance"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/turomar" class="social-icons"><i class="icon-social-facebook"></i></a></li>
+                            <li><a href="https://github.com/enricopal" class="social-icons"><i class="icon-social-github"></i></a></li>
+
+                            <li><a href="https://twitter.com/enricopalumbo91" class="social-icons"><i class="icon-social-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/enrico-palumbo-0272baa8/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
