--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Projects</h2>
                             <p> We are builders! </p>
-                           <img src="img/new_york.jpg" alt="Mountain View" style="width:220px;height:320px;">
+                           <img src="img/new_york.jpg" alt="Mountain View" style="width:300px;height:320px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
-                        <div class="margin-b-60 " style="width: 1000px;">
+                        <div class="margin-b-60 ">
                         <ul class="mediumFont">
                                 <p class="data"> 2017 </p>
 
@@ -246,13 +246,13 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Code</h2>
                             <p> Open source repos </p>
-                           <img src="img/hand.jpg" alt="Mountain View" style="width:220px;height:180px;">
+                           <img src="img/hand.jpg" alt="Mountain View" style="width:300px;height:240px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
-                        <div class="margin-b-60 " style="width: 1000px;">
+                        <div class="margin-b-60 ">
                         <ul class="mediumFont">
                                  <li> <a href="https://github.com/MultimediaSemantics/entity2rec"> entity2rec:</a> provides top-N item recommendations from knowledge graphs.</li>
                                 <li> <a href="https://github.com/MultimediaSemantics/entity2vec"> entity2vec:</a> creates property-specific embeddings of knowledge graphs applying node2vec on property-specific subgraphs</li>
@@ -283,13 +283,13 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Publications</h2>
                             <p> Considerate la vostra semenza: fatti non foste a viver come bruti, ma per seguir virtute e canoscenza </p>
-                           <img src="img/io_guardo.jpg" alt="Mountain View" style="width:220px;height:350px;">
+                           <img src="img/io_guardo.jpg" alt="Mountain View" style="width:200px;height:350px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
-                        <div class="margin-b-60 " style="width: 1000px;">
+                        <div class="margin-b-60 ">
                                 <p class="data"> 2017 </p>
 
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/Palumbo_Rizzo-RecSys2017.pdf">
