--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Publications</h2>
                             <p> Considerate la vostra semenza: fatti non foste a viver come bruti, ma per seguir virtute e canoscenza </p>
-                           <img src="img/io_guardo.jpg" alt="Mountain View" style="width:200px;height:350px;">
+                           <img src="img/io_guardo.jpg" alt="Mountain View" style="width:225px;height:350px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
                         </div>
@@ -291,7 +291,8 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
                                 <p class="data"> 2017 </p>
-
+                                <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/RecTour_2017_Workshop.pdf"> Predicting Your Next Stop-over from Location-based
+                                Social Network Data with Recurrent Neural Networks </a>, RecTour Workshop at RecSys2017, Como, Italy, 2017 </li>
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/Palumbo_Rizzo-RecSys2017.pdf">
                                 entity2rec: Learning User-Item Relatedness from Knowledge Graphs for Top-N Item Recommendation. </a> In 11th ACM Conference on Recommender Systems (RecSys) , Como, Italy, 2017 </li>
                                 <li> Troncy, Raphaël, et al. "3cixty: Building Comprehensive Knowledge Bases For City Exploration." Journal of Web Semantics (2017).</li>
@@ -304,7 +305,7 @@
                                 <li> Palumbo, Enrico, et al. "ICDSST 2016 on Decision Support Systems Addressing Sustainability & Societal Challenges SnowBall DSS: an ensemble Multi-Criteria Decision Support System encompassing cascading effects for disaster management." (2016).</li>
 
                                 <p class="data"> 2015 </p>
-                                <li> Palumbo, Enrico, and Walter Allasia. "Semantic Similarity Between Images: A Novel Approach Based on a Complex Network of Free Word Associations."International Conference on Similarity Search and Applications. Springer, Cham, 2015. </li>
+                                <li> Palumbo, Enrico, and Walter Allasia.<a href="enricopal.github.io/publications/Semantic Similarity between Images.pdf"> "Semantic Similarity Between Images: A Novel Approach Based on a Complex Network of Free Word Associations."</a> International Conference on Similarity Search and Applications. Springer, Cham, 2015. </li>
                                 <li> Allasia, Walter, and Enrico Palumbo. <a href="enricopal.github.io/publications/a complex network model of semantic memory impairments.pdf">"A complex network model of semantic memory impairments."</a> Multimedia & Expo Workshops (ICMEW), 2015 IEEE International Conference on. IEEE, 2015. </li>
                         </div>
                         
