--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                 Social Network Data with Recurrent Neural Networks </a>, RecTour Workshop at RecSys2017, Como, Italy, 2017 </li>
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/Palumbo_Rizzo-RecSys2017.pdf">
                                 entity2rec: Learning User-Item Relatedness from Knowledge Graphs for Top-N Item Recommendation. </a> In 11th ACM Conference on Recommender Systems (RecSys) , Como, Italy, 2017 </li>
-                                <li> Troncy, Raphaël, et al. "3cixty: Building Comprehensive Knowledge Bases For City Exploration." Journal of Web Semantics (2017).</li>
+                                <li> Troncy, Raphaël, et al. <a href= "enricopal.github.io/publications/3cixty.pdf"> 3cixty: Building Comprehensive Knowledge Bases For City Exploration." </a> Journal of Web Semantics (2017).</li>
                                 <li> Palumbo E., Sygkounas E., Troncy R., Rizzo G. (2017) <a href="enricopal.github.io/publications/SentiME_SemEval2017_camera_ready.pdf" > SentiME++ at SemEval-2017 Task 4A: Stacking State-of-the-Art Classifiers to Enhance Sentiment Classification.</a> In International Workshop on Semantic Evaluation (SemEval), Vancouver, Canada  
                                 </li>
 
