changed short bio

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
                             <p>I'm Enrico Palumbo, researcher, data lover and musician. I work as a data scientist in <a href="http://www.ismb.it"> ISMB</a>,  Italy and study as a PhD student in <a href="https://www.eurecom.fr">Eurecom</a>, France.</p>
-                            <p> My research interests lie at the intersection between Machine Learning, Natural Language Processing and Semantic Technologies. </p>
+                            <p> My research interests lie at the intersection among Recommender Systems, Natural Language Processing and Semantics.</p>
                             <p> I am currently working on: </p>
                             <ul class="mediumFont">
                             <li> recommender systems leveraging knowledge graphs </li>
