--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <ul class="mediumFont">
                                 <p class="data"> 2017 </p>
 
-                                <li> PasTime: creation and development of a recommender system that provides personalized suggestions of places and events in a city. We learn to recommend tourist paths by feeding sequences of tourist check-ins in Points-of-Interests to a Recurrent Neural Networks with multiple layers. </li>
+                                <li> PasTime: creation and development of a recommender system that provides personalized suggestions of places and events in a city. We learn to recommend tourist paths by feeding sequences of tourist check-ins in Points-of-Interests to a Recurrent Neural Network. </li>
 
                                 <p class="data"> 2016 </p>
                                 <li> <a href="https://www.3cixty.com/" > 3cixty:</a> creation and development of a machine learning based approach to automatically identify duplicates during the integration of places and events data from heterogeneous sources for the creation of city knowledge bases. </li>
