add know base gen

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
                                 <p class="data"> 2018 </p>
-                                <li> Palumbo E., Rizzo G., Troncy R.  STEM: Stacked Threshold-based Entity Matching </a>, Semantic Web Journal, Special Issue on Machine Learning for Knowledge Base Generation, 2018 (to appear) </li>
+                                <li> Palumbo E., Rizzo G., Troncy R.  STEM: Stacked Threshold-based Entity Matching for Knowledge Base Generation </a>, Semantic Web Journal, Special Issue on Machine Learning for Knowledge Base Generation, 2018 (to appear) </li>
                                 </li>
                                 <p class="data"> 2017 </p>
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/RecTour_2017_Workshop.pdf"> Predicting Your Next Stop-over from Location-based
