--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 <p class="data"> 2018 </p>
                                 <li> Palumbo E., Rizzo G., Troncy R., Baralis E., Osella M., Ferro E. <a href="enricopal.github.io/publications/Knowledge_Graph_Embeddings_with_node2vec_for_Item_Recommendation.pdf"> Knowledge Graph Embeddings with node2vec for Item Recommendation</a>, Poster & Demo sessions, ESWC2018, Heraklion, Greece, 2018 </li>
                                 <li> Palumbo E., Rizzo G., Troncy R., Baralis E., Osella M., Ferro E. <a href="enricopal.github.io/publications/dl4kgs_workshop_eswc18.pdf"> An Empirical Comparison of Knowledge Graph Embeddings for Item Recommendation </a>, Deep Learning for Knowledge Graphs and Semantics Workshop at ESWC2018, Heraklion, Greece, 2018 </li>
-                                <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/STEM_SWJ.pdf"> STEM: Stacked Threshold-based Entity Matching for Knowledge Base Generation </a>, Semantic Web Journal, Special Issue on Machine Learning for Knowledge Base Generation, 2018 (to appear) </li>
+                                <li> Palumbo E., Rizzo G., Troncy R. <a href="http://www.semantic-web-journal.net/system/files/swj1762.pdf"> STEM: Stacked Threshold-based Entity Matching for Knowledge Base Generation </a>, Semantic Web Journal, Special Issue on Machine Learning for Knowledge Base Generation, 2018 </li>
                                 </li>
                                 <p class="data"> 2017 </p>
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/RecTour_2017_Workshop.pdf"> Predicting Your Next Stop-over from Location-based
