--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
                             <p> My research interests lie at the intersection among Recommender Systems, Natural Language Processing and Semantics.</p>
                             <p> I am currently working on: </p>
                             <ul class="mediumFont">
-                            <li> recommender systems leveraging knowledge graphs </li>
-                            <li> measures of entity relatedness for entity linking </li>
+                            <li> knowledge graph embeddings for recommender systems </li>
+                            <li> sequence-aware recommender systems </li>
                             <li> machine learning approaches to entity matching </li>
+                            <li> measures of entity relatedness for entity linking </li>
                             <li> sentiment analysis on social media data </li>
                             </ul>
                             <p> In my free time, I play the guitar and sing in a band called <a href="https://www.facebook.com/alephantofficial/?ref=bookmarks">Alephant.</a> </p>
@@ -187,6 +188,10 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
                         <ul class="mediumFont">
+
+                                <p class="data"> 2018 </p>
+
+                                <li> <a href="http://www.cedus.eu/"> CEDUS: </a>  is a smart city project that generates a set of software components to effectively collect, integrate and visualize city data to support decision making processes. The team is in charge of the impact assessment and go-to-market activities, i.e. of the evaluation of the societal, economic and environmental impacts of the CEDUS technologies. </li>
                                 <p class="data"> 2017 </p>
 
                                 <li> PasTime: creation and development of a recommender system that provides personalized suggestions of places and events in a city. We learn to recommend tourist paths by feeding sequences of tourist check-ins in Points-of-Interests to a Recurrent Neural Network. </li>
@@ -292,8 +297,8 @@
                         <div class="margin-b-60 ">
                                 <p class="data"> 2018 </p>
                                 <li> Carducci G., Rizzo G., Monti D., Palumbo E., Morisio M. <a href="http://www.mdpi.com/2078-2489/9/5/127/html"> TwitPersonality: Computing Personality Traits from Tweets Using Word Embeddings and Supervised Learning. Information. </a> 2018 May 18;9(5):127. </li>
-                                <li> Caroleo B.R.D., Palumbo E., Osella M. Lotito A., Rizzo G., Ferro E.G., Attanasio A., Chiusano S.A., Zuccaro, G., Leone M., De Gregorio D. A Knowledge-Based Multi-Criteria Decision Support System Encompassing Cascading Effects For Disaster Management, Interantional Journal of Information Technology & Decision Making, 2018 </li>
-                                <li> Palumbo E., Rizzo G., Troncy R., Baralis E., Osella M., Ferro E. <a href="enricopal.github.io/publications/Knowledge_Graph_Embeddings_with_node2vec_for_Item_Recommendation.pdf"> Knowledge Graph Embeddings with node2vec for Item Recommendation</a>, Poster & Demo sessions, ESWC2018, Heraklion, Greece, 2018 (best poster paper award) </li>            
+                                <li> Caroleo B.R.D., Palumbo E., Osella M. Lotito A., Rizzo G., Ferro E.G., Attanasio A., Chiusano S.A., Zuccaro, G., Leone M., De Gregorio D. A Knowledge-Based Multi-Criteria Decision Support System Encompassing Cascading Effects For Disaster Management, International Journal of Information Technology & Decision Making, 2018 </li>
+                                <li> Palumbo E., Rizzo G., Troncy R., Baralis E., Osella M., Ferro E. <a href="enricopal.github.io/publications/Knowledge_Graph_Embeddings_with_node2vec_for_Item_Recommendation.pdf"> Knowledge Graph Embeddings with node2vec for Item Recommendation</a>, Poster & Demo sessions, ESWC2018, Heraklion, Greece, 2018 <mark>(best poster paper award) </mark> </li>            
                                 <li> Palumbo E., Rizzo G., Troncy R., Baralis E., Osella M., Ferro E. <a href="enricopal.github.io/publications/dl4kgs_workshop_eswc18.pdf"> An Empirical Comparison of Knowledge Graph Embeddings for Item Recommendation </a>, Deep Learning for Knowledge Graphs and Semantics Workshop at ESWC2018, Heraklion, Greece, 2018 </li>
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="http://www.semantic-web-journal.net/system/files/swj1762.pdf"> STEM: Stacked Threshold-based Entity Matching for Knowledge Base Generation </a>, Semantic Web Journal, Special Issue on Machine Learning for Knowledge Base Generation, 2018 </li>
                                 </li>
