--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
                                 <p class="data"> 2018 </p>
-
-                                <li> Giammusso Sara, Guerriero Mario, Lisena Pasquale, Palumbo Enrico & Troncy Raphaël. Predicting The Emotion of Playlists Using Track Lyrics. In 19th International Society for Music Information Retrieval Conference (ISMIR), Late-Breaking Demo Track, Paris, France, September 23-27, 2018. http://ismir2018.ircam.fr/pages/events-lbd.html </li>
+                                <li> Giammusso Sara, Guerriero Mario, Lisena Pasquale, Palumbo Enrico & Troncy Raphaël. Predicting The Emotion of Playlists Using Track Lyrics. In 19th International Society for Music Information Retrieval Conference (ISMIR), Late-Breaking Demo Track, Paris, France, September 23-27, 2018. <a href="https://drive.google.com/file/d/1TOfU6_yhJ-JLFHAuAiMA_F0BXpuONLv-/view"> </li>
                                 <li> Monti D., Palumbo E., Rizzo G., Lisena P., Troncy R., Fell M., Cabrio E., Morisio M. <a href="enricopal.github.io/publications/RecSys_Challenge_2018.pdf"> An Ensemble Approach of Recurrent Neural Networks using Pre-Trained Embeddings for Playlist Completion </a> RecSys Challenge, Vancouver, 2018 </li> 
                                 <li> Carducci G., Rizzo G., Monti D., Palumbo E., Morisio M. <a href="http://www.mdpi.com/2078-2489/9/5/127/html"> TwitPersonality: Computing Personality Traits from Tweets Using Word Embeddings and Supervised Learning. Information. </a> 2018 May 18;9(5):127. </li>
                                 <li> Caroleo B.R.D., Palumbo E., Osella M. Lotito A., Rizzo G., Ferro E.G., Attanasio A., Chiusano S.A., Zuccaro, G., Leone M., De Gregorio D. A Knowledge-Based Multi-Criteria Decision Support System Encompassing Cascading Effects For Disaster Management, International Journal of Information Technology & Decision Making, 2018 </li>
