--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="http://www.semantic-web-journal.net/system/files/swj1762.pdf"> STEM: Stacked Threshold-based Entity Matching for Knowledge Base Generation </a>, Semantic Web Journal, Special Issue on Machine Learning for Knowledge Base Generation, 2018 </li>
                                 </li>
                                 <p class="data"> 2017 </p>
-                                <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/RecTour_2017_Workshop.pdf"> Predicting Your Next Stop-over from Location-based
+                                <li> Palumbo E., Rizzo G., Troncy R., Baralis E. <a href="enricopal.github.io/publications/RecTour_2017_Workshop.pdf"> Predicting Your Next Stop-over from Location-based
                                 Social Network Data with Recurrent Neural Networks </a>, RecTour Workshop at RecSys2017, Como, Italy, 2017 </li>
                                 <li> Palumbo E., Rizzo G., Troncy R. <a href="enricopal.github.io/publications/entity2rec.pdf">
                                 entity2rec: Learning User-Item Relatedness from Knowledge Graphs for Top-N Item Recommendation. </a> In 11th ACM Conference on Recommender Systems (RecSys) , Como, Italy, 2017 </li>
