--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title">Enrico <br/> Palumbo </h1>
-                            <p class="promo-block-text"> Data Scientist &amp; Researcher </p>
+                            <p class="promo-block-text"> Research Scientist </p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/turomar" class="social-icons"><i class="icon-social-facebook"></i></a></li>
@@ -122,9 +122,8 @@
 
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>I'm Enrico Palumbo, researcher, data lover and musician. I work as a data scientist in <a href="http://www.ismb.it"> ISMB</a>,  Italy and study as a PhD student in <a href="https://www.eurecom.fr">Eurecom</a>, France.</p>
-                            <p> My research interests lie at the intersection among Recommender Systems, Natural Language Processing and Semantics.</p>
-                            <p> I am currently working on: </p>
+                            <p>I'm Enrico Palumbo and I am research scientist (PhD). I currently work for Amazon Alexa in the Natural Language Understanding field.</p>
+                            <p> My research interests lie at the intersection among Recommender Systems, Natural Language Understanding and Semantics on topics such as:</p>
                             <ul class="mediumFont">
                             <li> knowledge graph embeddings for recommender systems </li>
                             <li> sequence-aware recommender systems </li>
@@ -188,6 +187,12 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
                         <ul class="mediumFont">
+                                <p class="data"> 2020 </p>
+
+                                <li> <a href="https://developer.amazon.com/"> Alexa: </a> is a voice-first digital assistant created by Amazon. I work in the research and development of the Natural Language Understanding model. </li>
+                                <p class="data"> 2019 </p>
+
+                                <li> <a href="http://www.tinderbook.it/"> Tinderbook: </a> is a book recommendation application based on my knowledge graph embeddings algorithm entity2rec. It provides book suggestions given a single book that you like! Feel free to play with the online demo :) </li>
 
                                 <p class="data"> 2018 </p>
 
@@ -295,7 +300,14 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
+                                <p class="data"> 2020 </p>
+                                <li> Palumbo, Enrico, et al. "entity2rec: Property-specific knowledge graph embeddings for item recommendation." Expert Systems with Applications (2020): 113235. </li>
+                                <p class="data"> 2019 </p>
+                                <li> Palumbo, Enrico, et al. "Tinderbook: Fall in Love with Culture." European Semantic Web Conference. Springer, Cham, 2019. <a href="https://pdfs.semanticscholar.org/0d71/ffe7bb5be6f2d5f4aeb98c4bfbe7a3011415.pdf"> </li>
                                 <p class="data"> 2018 </p>
+                                <li> Monti, Diego, et al. "Sequeval: An offline evaluation framework for sequence-based recommender systems." Information 10.5 (2019): 174.  </li>
+                                <li> Monti, Diego, et al. "Semantic Trails of City Explorations: How Do We Live a City." arXiv preprint arXiv:1812.04367 (2018). </li>
+                                <li> Monti, Diego, et al. "An ensemble approach of recurrent neural networks using pre-trained embeddings for playlist completion." Proceedings of the ACM Recommender Systems Challenge 2018. 2018. 1-6. </li>
                                 <li> Giammusso Sara, Guerriero Mario, Lisena Pasquale, Palumbo Enrico & Troncy Raphaël. Predicting The Emotion of Playlists Using Track Lyrics. In 19th International Society for Music Information Retrieval Conference (ISMIR), Late-Breaking Demo Track, Paris, France, September 23-27, 2018. <a href="https://drive.google.com/file/d/1TOfU6_yhJ-JLFHAuAiMA_F0BXpuONLv-/view"> </li>
                                 <li> Monti D., Palumbo E., Rizzo G., Lisena P., Troncy R., Fell M., Cabrio E., Morisio M. <a href="enricopal.github.io/publications/RecSys_Challenge_2018.pdf"> An Ensemble Approach of Recurrent Neural Networks using Pre-Trained Embeddings for Playlist Completion </a> RecSys Challenge, Vancouver, 2018 </li> 
                                 <li> Carducci G., Rizzo G., Monti D., Palumbo E., Morisio M. <a href="http://www.mdpi.com/2078-2489/9/5/127/html"> TwitPersonality: Computing Personality Traits from Tweets Using Word Embeddings and Supervised Learning. Information. </a> 2018 May 18;9(5):127. </li>
@@ -442,9 +454,8 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Location</h5>
-                                    <a href="https://goo.gl/maps/2vA5n5cALe82">ISMB, Turin, Italy</a>
+                                    <a href="https://goo.gl/maps/2vA5n5cALe82">Amazon, Turin, Italy</a>
                                     <br> </br>
-                                    <a href="https://goo.gl/maps/9qVpQHPAd2T2">Eurecom, Biot, France</a>
                                 </div>
                                 <!--
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
@@ -454,9 +465,8 @@
                                 -->
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
-                                    <a href="mailto:#">palumbo@ismb.it</a>
+                                    <a href="mailto:#">enrico.palumbo@polito.it</a>
                                     <br> </br>
-                                    <a href="mailto:#">enrico.palumbo@eurecom.fr</a>
                                 </div>
                             </div>
                         </div>
