fix broken links

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
                                 <p class="data"> 2020 </p>
                                 <li> Palumbo, Enrico. <a href="enricopal.github.io/publications/enrico_thesis.pdf"> Knowledge Graph Embeddings for Recommender Systems (PhD thesis dissertation) </a> </li>
                                 <li> Palumbo, Enrico. <a href="enricopal.github.io/publications/Knowledge_Graph_Embeddings_For_Recommender_Systems_main_contributions.pdf"> Knowledge Graph Embeddings for Recommender Systems (PhD thesis dissertation - main contributions) </a> </li>
-                                <li> Palumbo, Enrico, et al. <a href="entity2rec_Property_specific_Knowledge_Graph_Embeddings_for_Item_Recommendation.pdf"> entity2rec: Property-specific knowledge graph embeddings for item recommendation." </a> Expert Systems with Applications (2020): 113235. </li>
+                                <li> Palumbo, Enrico, et al. <a href="enricopal.github.io/publications/entity2rec_Property_specific_Knowledge_Graph_Embeddings_for_Item_Recommendation.pdf"> entity2rec: Property-specific knowledge graph embeddings for item recommendation." </a> Expert Systems with Applications (2020): 113235. </li>
                                 <p class="data"> 2019 </p>
-                                <li> Palumbo, Enrico, et al. <a href="https://pdfs.semanticscholar.org/0d71/ffe7bb5be6f2d5f4aeb98c4bfbe7a3011415.pdf">"Tinderbook: Fall in Love with Culture." </a>  European Semantic Web Conference. Springer, Cham, 2019.  </li>
+                                <li> Palumbo, Enrico, et al. <a href="enricopal.github.io/publications/TinderBook___ESWC_2019.pdf">"Tinderbook: Fall in Love with Culture." </a>  European Semantic Web Conference. Springer, Cham, 2019.  </li>
                                 <p class="data"> 2018 </p>
                                 <li> Monti, Diego, et al. <a href="https://www.mdpi.com/2078-2489/10/5/174/pdf"> Sequeval: An offline evaluation framework for sequence-based recommender systems." </a>  Information 10.5 (2019): 174.  </li>
                                 <li> Monti, Diego, et al. <a href="https://arxiv.org/pdf/1812.04367.pdf"> "Semantic Trails of City Explorations: How Do We Live a City." </a> arXiv preprint arXiv:1812.04367 (2018). </li>
