--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Intro</h2>
                             <p>Hey there! </p>
-                            <img src="img/me.JPG" alt="Mountain View" style="width:304px;height:228px;">
+                            <img src="img/io.jpg" alt="Mountain View" style="width:280px;height:280px;">
                         </div>
                     </div>
 
