--- a/index.html
+++ b/index.html
@@ -470,6 +470,11 @@
                                     <a href="mailto:#">enrico.palumbo@polito.it</a>
                                     <br> </br>
                                 </div>
+                                <div class="col-md-3 col-xs-6">
+                                    <h5>SWSA Dissertation Award</h5>
+                                    <a href="swsa.html"> Application </a>
+                                    <br> </br>
+                                </div>
                             </div>
                         </div>
                     </div>
