--- a/swsa.html
+++ b/swsa.html
@@ -55,9 +55,9 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
                                 <p class="data"> 2020 </p>
-                                <li> Troncy, Raphael <a href="enricopal.github.io/Enrico_Palumbo-SWSA.pdf"> Letter of support and confirmation of PhD degree for Enrico Palumbo </a> </li>
+                                <li> Troncy, Raphaël <a href="enricopal.github.io/Enrico_Palumbo-SWSA.pdf"> Letter of support and confirmation of PhD degree for Enrico Palumbo </a> </li>
                                 <li> Palumbo, Enrico. <a href="enricopal.github.io/publications/enrico_thesis.pdf"> Knowledge Graph Embeddings for Recommender Systems (PhD thesis dissertation) </a> </li>
-                                <li> Palumbo, Enrico. <a href="enricopal.github.io/publications/Knowledge_Graph_Embeddings_For_Recommender_Systems_main_contributions.pdf"> Knowledge Graph Embeddings for Recommender Systems (PhD thesis dissertation - main contributions) </a> </li>
+                                <li> Palumbo, Enrico. <a href="enricopal.github.io/publications/Knowledge_Graph_Embeddings_For_Recommender_Systems_main_contributions.pdf"> Knowledge Graph Embeddings for Recommender Systems (PhD thesis dissertation - main contributions - 5 pages) </a> </li>
                         </div>
                         
                         <!-- Progress Box -->
