--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <title>Enrico Palumbo Personal Page</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="" name="description"/>
-        <meta content="" name="author"/>
+        <meta content="Enrico Palumbo research scientist personal page" name="description"/>
+        <meta content="Enrico Palumbo, entity2rec, recommender systems, NLU, NLP, Alexa, Politecnico di Torino, Links Foundation, EURECOM" name="keywords"/>
+        <meta content="Enrico Palumbo" name="author"/>
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
