--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Intro</h2>
                             <p>Hey there! </p>
-                            <img src="img/io.jpg" alt="Mountain View" style="width:280px;height:280px;">
+                            <img src="img/io.jpg" alt="Enrico Palumbo front picture" style="width:280px;height:280px;">
                         </div>
                     </div>
 
@@ -180,7 +180,7 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Projects</h2>
                             <p> We are builders! </p>
-                           <img src="img/new_york.jpg" alt="Mountain View" style="width:300px;height:320px;">
+                           <img src="img/new_york.jpg" alt="new york skyline" style="width:300px;height:320px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
                         </div>
@@ -257,7 +257,7 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Code</h2>
                             <p> Open source repos </p>
-                           <img src="img/hand.jpg" alt="Mountain View" style="width:300px;height:240px;">
+                           <img src="img/hand.jpg" alt="hand covering the sun" style="width:300px;height:240px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
                         </div>
@@ -294,7 +294,7 @@
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Publications</h2>
                             <p> Considerate la vostra semenza: fatti non foste a viver come bruti, ma per seguir virtute e canoscenza </p>
-                           <img src="img/io_guardo.jpg" alt="Mountain View" style="width:225px;height:350px;">
+                           <img src="img/io_guardo.jpg" alt="Enrico Palumbo picture" style="width:225px;height:350px;">
                            <!-- <img src="img/logoEURECOM.jpeg" alt="Mountain View" style="width:200px;height:120px;">
                             <img src="img/politecnicoditorino.jpg" style="width:180px;height:180px;">-->
                         </div>
@@ -529,6 +529,10 @@
         <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
         <script src="js/components/masonry.min.js" type="text/javascript"></script>
         <script src="js/components/wow.min.js" type="text/javascript"></script>
+
+      <script type="application/ld+json">
+        {"@context":"http://schema.org/","@type":"Person","name":"Enrico Palumbo","email":"enricopalumbo0@gmail.com","jobTitle":"Research Scientist","image":"img/io.jpg","url":"http://enricopal.github.io","mainEntityOfPage":"http://enricopal.github.io","worksFor":{"@type":"Organization","name":"Amazon","url":"https://www.amazon.com/"}}
+      </script>
 
     </body>
     <!-- END BODY -->
