--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                                 <p class="data"> 2018 </p>
 
-                                <li> <a href="http://www.cedus.eu/"> CEDUS: </a>  is a smart city project that generates a set of software components to effectively collect, integrate and visualize city data to support decision making processes. The team is in charge of the impact assessment and go-to-market activities, i.e. of the evaluation of the societal, economic and environmental impacts of the CEDUS technologies. </li>
+                                <li> <a href="https://digitalenabler.eng.it/en/cedus/"> CEDUS: </a>  is a smart city project that generates a set of software components to effectively collect, integrate and visualize city data to support decision making processes. The team is in charge of the impact assessment and go-to-market activities, i.e. of the evaluation of the societal, economic and environmental impacts of the CEDUS technologies. </li>
                                 <p class="data"> 2017 </p>
 
                                 <li> PasTime: creation and development of a recommender system that provides personalized suggestions of places and events in a city. We learn to recommend tourist paths by feeding sequences of tourist check-ins in Points-of-Interests to a Recurrent Neural Network. </li>
