fix broken links

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                                 <li> PasTime: creation and development of a recommender system that provides personalized suggestions of places and events in a city. We learn to recommend tourist paths by feeding sequences of tourist check-ins in Points-of-Interests to a Recurrent Neural Network. </li>
 
                                 <p class="data"> 2016 </p>
-                                <li> <a href="https://www.3cixty.com/" > 3cixty:</a> creation and development of a machine learning based approach to automatically identify duplicates during the integration of places and events data from heterogeneous sources for the creation of city knowledge bases. </li>
+                                <li> 3cixty: creation and development of a machine learning based approach to automatically identify duplicates during the integration of places and events data from heterogeneous sources for the creation of city knowledge bases. </li>
 
                                 <p class="data"> 2015 - 2017</p>
-                                <li> <a href="https://snowball-project.eu/" > Snowball</a>: creation and development of a data-driven Decision Support System based on Multi-Criteria Decision Making to support crisis managers in dealing with cascading effects</li>
+                                <li> <a href="https://cordis.europa.eu/project/id/606742" > Snowball</a>: creation and development of a data-driven Decision Support System based on Multi-Criteria Decision Making to support crisis managers in dealing with cascading effects</li>
                         </ul>
                         </div>
                         
