add meta description tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>Enrico Palumbo Personal Page</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="Enrico Palumbo research scientist personal page" name="description"/>
+        <meta description="Hi, I'm Enrico Palumbo (PhD) and this is my personal page! I work in NLU, Recommender Systems, Machine Learning, and Semantics!" name="description"/>
         <meta content="Enrico Palumbo, entity2rec, recommender systems, NLU, NLP, Alexa, Politecnico di Torino, Links Foundation, EURECOM" name="keywords"/>
         <meta content="Enrico Palumbo" name="author"/>
 
