--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 <li> <a href="https://developer.amazon.com/"> Alexa: </a> is a voice-first digital assistant created by Amazon. I work in the research and development of the Natural Language Understanding model. </li>
                                 <p class="data"> 2019 </p>
 
-                                <li> <a href="http://www.tinderbook.it/"> Tinderbook: </a> is a book recommendation application based on my knowledge graph embeddings algorithm entity2rec. It provides book suggestions given a single book that you like! Feel free to play with the online demo :) </li>
+                                <li> <a href="http://www.tinderbook.it/"> Tinderbook: </a> is a book recommendation application based on my knowledge graph embeddings algorithm entity2rec. It provides book suggestions given a single book that you like! </li>
 
                                 <p class="data"> 2018 </p>
 
@@ -302,14 +302,15 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60 ">
                                 <p class="data"> 2020 </p>
+                                <li> Palumbo, Enrico, et al. <a href="https://aclanthology.org/2020.coling-industry.5.pdf"> Semantic Diversity for Natural Language Understanding Evaluation in Dialog Systems. </a> Proceedings of the 28th International Conference on Computational Linguistics: Industry Track, 2020 </li>
                                 <li> Palumbo, Enrico. <a href="publications/enrico_thesis.pdf"> Knowledge Graph Embeddings for Recommender Systems (PhD thesis dissertation) </a> </li>
                                 <li> Palumbo, Enrico. <a href="publications/Knowledge_Graph_Embeddings_For_Recommender_Systems_main_contributions.pdf"> Knowledge Graph Embeddings for Recommender Systems (PhD thesis dissertation - main contributions) </a> </li>
-                                <li> Palumbo, Enrico, et al. <a href="publications/entity2rec_Property_specific_Knowledge_Graph_Embeddings_for_Item_Recommendation.pdf"> entity2rec: Property-specific knowledge graph embeddings for item recommendation." </a> Expert Systems with Applications (2020): 113235. </li>
+                                <li> Palumbo, Enrico, et al. <a href="publications/entity2rec_Property_specific_Knowledge_Graph_Embeddings_for_Item_Recommendation.pdf"> entity2rec: Property-specific knowledge graph embeddings for item recommendation. </a> Expert Systems with Applications (2020): 113235. </li>
                                 <p class="data"> 2019 </p>
-                                <li> Palumbo, Enrico, et al. <a href="publications/TinderBook___ESWC_2019.pdf">"Tinderbook: Fall in Love with Culture." </a>  European Semantic Web Conference. Springer, Cham, 2019.  </li>
+                                <li> Palumbo, Enrico, et al. <a href="publications/TinderBook___ESWC_2019.pdf"> Tinderbook: Fall in Love with Culture. </a>  European Semantic Web Conference. Springer, Cham, 2019.  </li>
                                 <p class="data"> 2018 </p>
-                                <li> Monti, Diego, et al. <a href="https://www.mdpi.com/2078-2489/10/5/174/pdf"> Sequeval: An offline evaluation framework for sequence-based recommender systems." </a>  Information 10.5 (2019): 174.  </li>
-                                <li> Monti, Diego, et al. <a href="https://arxiv.org/pdf/1812.04367.pdf"> "Semantic Trails of City Explorations: How Do We Live a City." </a> arXiv preprint arXiv:1812.04367 (2018). </li>
+                                <li> Monti, Diego, et al. <a href="https://www.mdpi.com/2078-2489/10/5/174/pdf"> Sequeval: An offline evaluation framework for sequence-based recommender systems. </a>  Information 10.5 (2019): 174.  </li>
+                                <li> Monti, Diego, et al. <a href="https://arxiv.org/pdf/1812.04367.pdf"> Semantic Trails of City Explorations: How Do We Live a City. </a> arXiv preprint arXiv:1812.04367 (2018). </li>
                                 <li> Monti, Diego, et al. <a href="https://dl.acm.org/doi/pdf/10.1145/3267471.3267484"> An ensemble approach of recurrent neural networks using pre-trained embeddings for playlist completion." </a> Proceedings of the ACM Recommender Systems Challenge 2018. 2018. 1-6. </li>
                                 <li> Giammusso Sara, Guerriero Mario, Lisena Pasquale, Palumbo Enrico & Troncy Raphaël. <a href="https://drive.google.com/file/d/1TOfU6_yhJ-JLFHAuAiMA_F0BXpuONLv-/view"> Predicting The Emotion of Playlists Using Track Lyrics. </a> In 19th International Society for Music Information Retrieval Conference (ISMIR), Late-Breaking Demo Track, Paris, France, September 23-27, 2018.  </li>
                                 <li> Monti D., Palumbo E., Rizzo G., Lisena P., Troncy R., Fell M., Cabrio E., Morisio M. <a href="publications/RecSys_Challenge_2018.pdf"> An Ensemble Approach of Recurrent Neural Networks using Pre-Trained Embeddings for Playlist Completion </a> RecSys Challenge, Vancouver, 2018 </li> 
