--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <!-- Header with thumbnail, name, and social links -->
 <div class="header">
-    <img src="thumbnail.jpg" alt="Enrico Palumbo" class="thumbnail">
+    <img src="img/mia_foto_thumbnail.jpg" alt="Enrico Palumbo" class="thumbnail">
     <div class="name-block">
         <h1>Enrico Palumbo</h1>
         <h2>Senior Research Scientist @ Spotify</h2>
@@ -164,3 +164,4 @@
 
 </body>
 </html>
+
